crates/wdl-analysis/tests/validation/empty/source.errors
error: there must be at least one task, workflow, or struct definition in the file
  ┌─ tests/validation/empty/source.wdl:4:1
  │
4 │ 
  │  

